Fix right spacing

--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,9 @@ p {
 .MuiFormGroup-root {
     flex-direction: row !important;
     flex-wrap: nowrap !important;
+    flex-grow: 1;
+    justify-content: flex-end;
+    margin-right: -13px;
 }
 
 .MuiTypography-body1 {
